fix but UI text too long side bar item

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -63,6 +63,7 @@
       flex: 1;
       text-align: left;
       padding: 0 8px;
+      white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
