--- a/src/components/Layouts/components/Sidebar/SidebarItem/SidebarItem.module.scss
+++ b/src/components/Layouts/components/Sidebar/SidebarItem/SidebarItem.module.scss
@@ -13,6 +13,9 @@
     flex: 1;
     width: 0; // Fix Issue 464210: Flex-basis is being ignored when sizing nested flex containers.
     margin: 0px 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .input-list-name {
